force-app/main/default/objects/User/fields/Firma__c.field-meta.xml
<CustomField>
    <fullName>Firma__c</fullName>
    <label>Firma</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>