force-app/main/default/objects/User/fields/Firmador_Constancia__c.field-meta.xml
<CustomField>
    <fullName>Firmador_Constancia__c</fullName>
    <label>Firmador de Constancia</label>
    <relationshipName>Firmadores</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>