force-app/main/default/objects/User/fields/Funcion_Firmador__c.field-meta.xml
<CustomField>
    <fullName>Funcion_Firmador__c</fullName>
    <formula>Firmador_Constancia__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Función de Firmador</label>
    <type>Text</type>
</CustomField>