force-app/main/default/objects/User/fields/Nombre_firmador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_firmador__c</fullName>
    <formula>Firmador_Constancia__r.FirstName+ &apos; &apos; + Firmador_Constancia__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre firmador</label>
    <type>Text</type>
</CustomField>